# trabalho-compiladores

./: .gitignore  LICENSE  README.md  arquivo.class--  bison.y  flex.l  gramatica.txt  meson.build  run.sh  teste.txt  teste1.j--
exemplo_do_professor/: expr.l  expr.y  exprMain.c  makefile
geração_gramatica/:  flex.l  .gitignore  1 - flex.l  2 - bison.y  bison.y
gramatica/: bison.y  flex.l
include/: ast.h  astUtils.h  conversoes.h  lambda.h  mensagens.h  tabela_simbolos.h  tipos.h  utils.h
include/libraries/: cvector.h  lambda.h
include/utils/: cvector.h  str.h
mcc-flex-bison/: .gitignore  .gitlab-ci.yml  README.md  meson.build
mcc-flex-bison/.devcontainer/: Dockerfile
mcc-flex-bison/app/: mc_asm.c  mc_ast_to_dot.c  mc_cfg_to_dot.c  mc_ir.c  mc_symbol_table.c  mcc.c
mcc-flex-bison/docs/: development_notes.md
mcc-flex-bison/include/mcc/: assembly.h  ast.h  ast_print.h  ast_visit.h  cfg.h  parser.h  semantic_checks.h  symbol_table.h  symbol_table_print.h  tac.h
mcc-flex-bison/src/: assembly.c  ast.c  ast_print.c  ast_visit.c  cfg.c  parser.y  scanner.l  semantic_checks.c  symbol_table.c  symbol_table_print.c  tac.c
mcc-flex-bison/test/unit/: intermediate_rep_test.c  parser_test.c  semantic_checks_test.c  symbol_table_test.c  unit_test.h
src/: ast.c  astUtils.c  bison.tab.c  bison.tab.h  bison.y  conversoes.c  flex.l  lex.yy.c  main.c  mensagens.c  tabela_simbolos.c  tipos.c  utils..c  utils.c
src/ast/: bytecode.c  exibir.c  extra.c  semantico.c  sintatico.c  utils.c
src/libraries/: str.c
src/utils/: str.c
